Update kitchenCI tests.
Update kitchenCI tests for commits :

9b67152 Docker: add prometheus_image variable to be able to specify prometheus image
c08c454 docker: ensure prometheus data directory owner is nobody
ff06897 Prometheus arg storage.local.path is no called storage.tsdb.path
d5b7517 prometheus alertmanager.url arg is not working anymore
b7b7d6f Fixing prometheus_commandline_args key, new prometheus use double dash.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,8 +29,10 @@ prometheus_commandline_args:
   storage.tsdb.path: "/prometheus-data/data"
 prometheus_image: "prom/prometheus"
 
-prometheus_rule_files:
-  - '/prometheus-data/alert.rules'
+# Fileglobs loop format
+# http://docs.ansible.com/ansible/latest/playbooks_loops.html#id4
+prometheus_rule_files: []
+
 # See https://prometheus.io/docs/operating/configuration/#<scrape_config>
 prometheus_scrape_configs:
 - job_name: 'prometheus'
