alertmanager: add some variables to be able to customise alertmanager config
Provide the same behavior as prometheus command line args to be able to configure alertmanager.
Also switch to the new alertmanager who now work witu `--` args, not `-` anymore.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,6 +29,10 @@ prometheus_commandline_args:
   storage.tsdb.path: "/prometheus-data/data"
 prometheus_image: "prom/prometheus"
 
+alertmanager_commandline_args:
+  config.file: "/alertmanager/alertmanager.yml"
+alertmanager_image: "prom/alertmanager"
+
 # Fileglobs loop format
 # http://docs.ansible.com/ansible/latest/playbooks_loops.html#id4
 prometheus_rule_files: []
