--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,8 @@ alertmanager_image: "prom/alertmanager"
 # Fileglobs loop format
 # http://docs.ansible.com/ansible/latest/playbooks_loops.html#id4
 prometheus_rule_files: []
+alertmanager_template_files:
+  - files/alertmanager_templates/*.tmpl
 
 # Telegraf rules
 prometheus_telegraf_rules_config: {}
@@ -54,6 +56,8 @@ prometheus_scrape_configs:
   static_configs:
     - targets:
       - "{{ ansible_default_ipv4.address }}:9100"
+prometheus_rules:
+- '/prometheus-data/*.rules'
 
 prometheus_alerting:
   alertmanagers:
