tests: adding self test in the playbook to ensure services deployed are running
Before that commits, when the playbook deploy a docker container like prometheus, the status of prometheus
is never checked. We could end up with a successful playbook and a dead prometheus.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,3 +4,4 @@
 - { include: install-alertmanager.yml, when: install_alertmanager == true }
 - { include: install-blackbox_exporter.yml, when: install_blackbox_exporter == true }
 - { include: install-node_exporter.yml, when: install_node_exporter == true }
+- include: self-test.yml
