feature: add new grafana service
This commit add rules to setup a Grafana server. As the same way as Alertmanager or Prometheus.

It will create a Docker container with a Grafana server with the default admin/admin user
And if you install a prometheus, it will be automatically added as datasource `prometheus` for grafana.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,3 +10,7 @@
 - name: restart blackbox_exporter
   become: yes
   command: docker restart blackbox_exporter
+
+- name: restart grafana
+  become: yes
+  command: docker restart grafana
