--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,22 +1,27 @@
 ---
 path: /srv/
+
 prometheus_version: latest
 install_prometheus: true
 install_alertmanager: true
 install_blackbox_exporter: false
 install_node_exporter: false
+install_grafana: false
 
 prometheus_restart_handler: restart prometheus
 alertmanager_restart_handler: restart alertmanager
 blackbox_exporter_restart_handler: restart blackbox_exporter
+grafana_restart_handler: restart grafana
 
 prometheus_hostname: "{{ ansible_fqdn }}"
 alertmanager_hostname: "{{ ansible_fqdn }}"
 blackbox_exporter_hostname: blackbox-exporter
 node_exporter_hostname: "{{ ansible_fqdn }}"
+grafana_hostname: "{{ ansible_fqdn }}"
 
 # Lets prometheus know where to send alerts
 alertmanager_ip: "{{ ansible_default_ipv4.address }}"
+prometheus_ip: "{{ ansible_default_ipv4.address }}"
 # Enable some default alerts. You should add your own custom ones.
 default_alert_rules: true
 
@@ -111,3 +116,27 @@ blackbox_exporter_modules:
       no_follow_redirects: false
       fail_if_ssl: false
       fail_if_not_ssl: false
+
+#
+# Grafana
+#
+
+grafana_image: grafana/grafana:4.5.0
+grafana_database_type: mysql
+grafana_database_host: "localhost:3306"
+grafana_database_name: grafana
+grafana_database_user: grafana
+grafana_database_password: s3cr3t
+
+# Doc here for the dashboards format http://docs.grafana.org/reference/dashboard/
+grafana_dashboards_files: []
+
+grafana_default_datasource:
+  name: "prometheus"
+  type: "prometheus"
+  url: "http://{{ prometheus_ip }}:9090"
+  access: "proxy"
+  basicAuth: false
+  isDefault: true
+
+
