--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,4 +4,5 @@
 - { include: install-alertmanager.yml, when: install_alertmanager == true }
 - { include: install-blackbox_exporter.yml, when: install_blackbox_exporter == true }
 - { include: install-node_exporter.yml, when: install_node_exporter == true }
+- { include: install-grafana.yml, when: install_grafana == true }
 - include: self-test.yml
