default: update default external url to add http schema. If not alertmanager return only 404 errors

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,7 +37,7 @@ prometheus_image: "prom/prometheus"
 
 alertmanager_commandline_args:
   config.file: "/alertmanager/alertmanager.yml"
-  web.external-url: "{{ alertmanager_hostname }}"
+  web.external-url: "http://{{ alertmanager_hostname }}"
 alertmanager_image: "prom/alertmanager"
 
 # Fileglobs loop format
