rules: Add UUID label on prometheus alert rules if specified
Goal of this new label is to be able to differenciate several prometheus server
quite more easily alerts on alertmanager using those UUID

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,6 +48,9 @@ prometheus_rule_files: []
 #  - templates/telegraf.rules
 #  - templates/opsgenie.rules
 
+# If set, will add UUID labels on alert rules.
+prometheus_alerts_uuid: ""
+
 alertmanager_template_files:
   - files/alertmanager_templates/*.tmpl
 
