--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -90,6 +90,7 @@ prometheus_telegraf_rules_config_default:
     threshold: 302
   HttpResponseStringMatch:
     name: HttpResponseStringMatch
+    threshold: 0
   LbCertsExpireCheck:
     name: LbCertsExpireCheck
     threshold: 30
