--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -221,6 +221,7 @@ grafana_database_host: "localhost:3306"
 grafana_database_name: grafana
 grafana_database_user: grafana
 grafana_database_password: s3cr3t
+grafana_admin_password: admin
 
 # Doc here for the dashboards format http://docs.grafana.org/reference/dashboard/
 grafana_dashboards_files: []
