Refactoring to improve readability, added features/variables, code improvements

--- a/tasks/install-blackbox_exporter.yml
+++ b/tasks/install-blackbox_exporter.yml
@@ -2,9 +2,9 @@
 - name: Create blackbox  container
   docker_container:
     name: blackbox_exporter
-    command: -config.file=/blackbox-data/blackbox_exporter.yml
     hostname: "{{ blackbox_exporter_hostname }}"
-    image: prom/blackbox-exporter
+    image: "{{ blackbox_exporter_image }}"
+    command: "{% for key in blackbox_exporter_commandline_args %}--{{ key }}={{ blackbox_exporter_commandline_args[key] }} {% endfor %}"
     volumes:
       - "{{ path }}/blackbox-data:/blackbox-data"
     published_ports:
