Increase LoadAverage alert rule threshold to 6 and make it a warning severity alongside CPUUsage
Same threshold as our kubernetes NodeLoadAverage alert rule.
Warning severity because critical doesn't make sense as we can't "fix"
thoses alerts right away.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -70,12 +70,14 @@ prometheus_telegraf_rules_config_default:
   CPUUsage:
     name: CPUUsage
     threshold: 90
+    severity: warning
   MemoryUsage:
     name: MemoryUsage
     threshold: 90
   LoadAverage:
     name: LoadAverage
-    threshold: 2.5
+    threshold: 6
+    severity: warning
   LowDiskSpace:
     name: LowDiskSpace
     threshold: 90
